Fix position of 'MENU' text and empty menu on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,15 @@ nav#main-nav {
     z-index: 2;
 }
 
+.top-bar .toggle-topbar.menu-icon {
+    margin-top: -9px;
+}
+
+.top-bar.expanded {
+    height: auto!important;
+    padding: 0!important;
+}
+
 nav#main-nav ul.title-area li.name h1,
 nav#main-nav ul.right li a {
 	line-height: 60px;
